--- a/SpringSecurityIntegration/src/main/resources/application.properties
+++ b/SpringSecurityIntegration/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
-server.port=2022
+server.port=2025
+server.contextPath=/
